--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.2",
+    "axios": "^0.27.2",
     "faker": "^6.6.6",
+    "netlify-cli": "^11.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
